--- a/2022.02.05.md
+++ b/2022.02.05.md
@@ -11,19 +11,55 @@
   - 買った本を暇なときに読み進める
 - Tapple会
 　- 20:00~ Zoom会議
+___
 
 
 ## 本日の成果
 
 - 勉強時間
   - 10:30~12:00
+  - 15:00~18:30
+
+___
 
 ## 進捗
 - Programing
-  - Progate…
-  - GitHub…
+  - Progate…Ruby on RailsⅤまで完了
+  - GitHub…日報記載完了
 - Toefl
-  - 単語帳…
-  - 問題集…
+  - 単語帳…Rank2 week1~week
+  - 問題集…Reading passage3,
 - Photoshop
+  - 買った本…触れられず、明日取り返す！！
+- Tapple会…
+
+### 所感
+progateは予定より大きく進ませることができた。
+Toeflは単語を進ませるのに苦労した。単語帳の時間！と意気込んでやるのではなくちょこちょこやるようにして進めたい。
+Photoshopは明日の俺に任せた！！
+  
+____
+  
+## 日記
+今日は朝起きるのが遅くやる気が出なくて起きてから30分ぐらいベットから出れずにいたがtapple研究会のLINEでみんなが勉強開始していることを知りやる気が出た。共同開発の良さの一つを感じた瞬間であった。
+久しぶりにprogateを開いたがプログラミングの楽しさを再確認することができた。この楽しさを忘れず勉強を継続していきたい。
+Toeflの勉強は難航している。単語帳を試験までに2周はしたいところだがかなり厳しそうである。出てくる単語が分からないものばかりでありサクサク進まないからである。しかしまとまった時間を作って単語帳をひたすら読むというのは集中力が続かないのでprogateを進めているときや日報を記載しているときなどにパッと開いて見開き1ページ進めるという方法をとり地道にゴールを目指していく。
+
+___
+
+## 明日やること
+```
+Programing
+  ・Progate Ruby on Railsコースのstep3をクリア
+  ・GitHubにて日報を書く
+Toefl
+  ・単語帳…隙間時間を使ってRank３までは目を通す
+  ・問題集…Listeningセクションを完了する
+  ・問題集…Reading用のものを購入、ひたすら読んでいく
+Photoshop
+  ・買った本を暇なときに読み進める
+友達付き合い
+　・夜はバチ飲み
+```
+
 
